# efi_final_posts

./: .gitignore  README.md  app.py  decorators.py  models.py  pyproject.toml  requirements.txt  utils.py
decorators/: __init__.py  decorators.py  utils.py
environment/: pyvenv.cfg
migrations/versions/: 27651f4c33d7_.py  2813a2948bf6_.py  4e0651e59017_.py  72ff748e154a_renombrar_is_visible_a_is_active.py  8fee4393d9cd_.py  a4b2ed04f9b8_.py  bc8e674f0340_renombrar_comments_a_content_en_comment.py  c1677ea55ceb_.py  ce468824c27b_.py  e28af43b109c_inicial.py
models/: __init__.py  category_model.py  comment_model.py  post_model.py  user_model.py
repositories/: __init__.py  category_repository.py  comment_repository.py  post_repository.py  user_repository.py
schemas/: __init__.py  category_schema.py  comment_schema.py  post_schema.py  user_schema.py
services/: category_service.py  comment_service.py  post_service.py  user_service.py
templates/: categoria.html  comentar_post.html  crear_posts.html  editar_post.html  eliminar_post.html  index.html  layout.html  posts.html  ver_comentarios.html
templates/auth/: login.html  register.html
views/: auth_views.py  category_views.py  comment_views.py  post_views.py  stats_views.py  user_views.py
