[project]
name = "efi-posts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.16.1",
    "bcrypt>=5.0.0",
    "blinker==1.9.0",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "flask==3.1.1",
    "flask-cors>=6.0.1",
    "flask-jwt-extended>=4.7.1",
    "flask-login==0.6.3",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.2.3",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "marshmallow>=4.0.1",
    "marshmallow-sqlalchemy>=1.4.2",
    "passlib>=1.7.4",
    "pymysql==1.1.1",
    "requests==2.32.4",
    "sqlalchemy==2.0.41",
    "tomli==2.2.1",
    "typing-extensions==4.14.0",
    "urllib3==2.5.0",
    "werkzeug==3.1.3",
]
